...
      />
      <Tabs.Screen
        name="(cellar)"
        listeners={resetTabOnPress}
        options={{
          title: t("nav.cellar"),
          tabBarButtonTestID: "cellar-tab",
          tabBarIcon: ({ color, size }) => (
            <Icon source="bottle-wine-outline" size={size} color={color} />
          ),
        }}
      />
      <Tabs.Screen
        name="(wines)"
        listeners={resetTabOnPress}
        options={{
          title: t("nav.wines"),
          tabBarButtonTestID: "wines-tab",
          tabBarIcon: ({ color, size }) => (
            <Icon source="glass-wine" size={size} color={color} />
          ),
        }}
      />
      <Tabs.Screen
...
      />
      <Tabs.Screen
        name="(more)"
        listeners={resetTabOnPress}
        options={{
          title: t("nav.more"),
          tabBarButtonTestID: "more-tab",
          tabBarIcon: ({ color, size }) => (
            <Icon source="dots-horizontal" size={size} color={color} />
          ),
        }}
      />
    </Tabs>
...
