...
            title="Wines"
            left={(props) => <List.Icon {...props} icon="glass-wine" />}
            right={(props) => <List.Icon {...props} icon="chevron-right" />}
            onPress={() => router.push("/wines")}
          />
          <List.Item
            testID="menu-tasting-notes"
            title="Tasting Notes"
            left={(props) => <List.Icon {...props} icon="note-text-outline" />}
            right={(props) => <List.Icon {...props} icon="chevron-right" />}
            onPress={() => router.push("/tasting-notes")}
          />
        </List.Section>
...
